--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/styles.css
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/styles.css
@@ -42,3 +42,8 @@
     -fx-background-color: white;
     -fx-text-fill: #ffffff;
 }
+
+.my-button-style {
+    -fx-background-color: #f5c518;
+    -fx-text-fill: #000000;
+}
